# p5cpp

./: .clang-format  .editorconfig  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: ci.yaml
examples/: CMakeLists.txt
examples/breakout/: CMakeLists.txt  main.cpp
examples/furier_series/: CMakeLists.txt  data.hpp  main.cpp
examples/gravitas/: CMakeLists.txt  main.cpp
examples/gravitas_ai/: CMakeLists.txt  main.cpp
examples/lkas/: CMakeLists.txt  main.cpp
examples/molds/: CMakeLists.txt  main.cpp
examples/pixel_test/: CMakeLists.txt  main.cpp
examples/predator_and_prey/: CMakeLists.txt  main.cpp
examples/steering_behavior/: CMakeLists.txt  main.cpp
examples/text_wrapping/: CMakeLists.txt  main.cpp
examples/thetower/: CMakeLists.txt  main.cpp
include/: p5.hpp  p5cpp.hpp
include/p5cpp/: p5cpp.hpp
include/p5cpp/application/: logging.hpp  sketch.hpp  window.hpp  window_event.hpp
include/p5cpp/graphics/: color.hpp  shader.hpp
include/p5cpp/math/: angle.hpp  constants.hpp  matrix4x4.hpp  noise.hpp  random.hpp  rectangle.hpp  utility.hpp  value2.hpp
release/: CPackConfig.cmake  CPackSourceConfig.cmake
release/examples/breakout/: breakout
release/examples/gravitas_ai/: gravitas_ai
release/examples/molds/: molds
release/examples/thetower/: thetower
src/: app_context.hpp  audio.cpp  audio.hpp  bl.md  breakout.cpp  canvas.cpp  canvas.hpp  canvas_stack.cpp  canvas_stack.hpp  color.cpp  draw_buffer.cpp  draw_buffer.hpp  draw_command.hpp  draw_command_list.cpp  draw_command_list.hpp  draw_scope.cpp  draw_scope.hpp  drawcall.cpp  drawcall.hpp  drawscope.cpp  drawscope.hpp  engine.cpp  engine.hpp  font.cpp  font.hpp  framebuffer.cpp  framebuffer.hpp  geometry.cpp  geometry.hpp  graphics.cpp  gravitas.cpp  linepath.cpp  linepath.hpp  main.cpp  math.cpp  matrix_stack.cpp  matrix_stack.hpp  matrixstack.cpp  matrixstack.hpp  meshwriter.cpp  (+44 more)
src/application/: engine.cpp  engine.hpp
src/modules/: input_module.cpp  input_module.hpp  lifecycle_module.cpp  lifecycle_module.hpp  rendering_module.cpp  rendering_module.hpp  sketch_module.cpp  sketch_module.hpp  window_module.cpp  window_module.hpp
src/modules/frame/: frame_data.hpp  frame_module.cpp  frame_module.hpp
src/modules/input/: input_data.hpp  input_module.cpp  input_module.hpp
src/modules/rendering/: rendering_data.hpp  rendering_module.cpp  rendering_module.hpp
src/modules/sketch/: sketch_module.cpp  sketch_module.hpp
src/modules/window/: window_module.cpp  window_module.hpp
src/p5cpp/application/: logging.cpp  module.cpp  window.cpp
src/p5cpp/graphics/: internal_shaders.cpp  internal_shaders.hpp  matrix_stack.cpp  matrix_stack.hpp  shader.cpp
src/p5cpp/math/: matrix4x4.cpp  noise.cpp  random.cpp
src/pipeline/: middleware.cpp  middleware.hpp
src/services/: renderer.cpp  renderer.hpp  uniform_cache.cpp  uniform_cache.hpp  window.cpp  window.hpp
